# HTWKStrategy

./: CMakeLists.txt  README.md  main.cpp  qballwidget.cpp  qballwidget.h  qdraggablewidget.cpp  qdraggablewidget.h  qrobotwidget.cpp  qrobotwidget.h  qsoccerfieldwidget.cpp  qsoccerfieldwidget.h  soccerfield.h  teamstrategycontroller.cpp  teamstrategycontroller.h
engine/messages/: CMakeLists.txt  worldmodel.proto
engine/nullmq/: CMakeLists.txt  nullmq.cpp  nullmq.h
engine/teamstrategy/: CMakeLists.txt  dumbteamstrategy.cpp  dumbteamstrategy.h  managedteamstrategy.cpp  managedteamstrategy.h  strikerBehaviour.cpp  strikerBehaviour.h  teamstrategy.cpp  teamstrategy.h  teamstrategybuilder.cpp  teamstrategybuilder.h  teamstrategyhelper.cpp  teamstrategyhelper.h  teamstrategyloader.cpp  teamstrategyloader.h  teamstrategyrobocup.cpp  teamstrategyrobocup.h
engine/teamstrategy/order/: keepgoalorder.h  moveballgoalorder.h  moveballorder.h  noorder.h  order.h  orderfactory.cpp  orderfactory.h  receivepassorder.h  walktopositionorder.h
includes/firmware/gamecontroller/: gamecontroller_client.h
includes/firmware/include/: gamestatetypes.h  position.h
includes/firmware/vision_primitives/: point_2d.h
includes/firmware/worldmodel/: worldmodelsocket.h
includes/include/: algorithm_ext.h  dcm.h  envinfo.h  fast_math.h  fw_constants.h
resources/: images.qrc
tactics/: kickoff_0.conf  kickoff_1.conf
